Fix model for swagger
